<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_professor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="top"
        android:src="@drawable/default_pic" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_professor_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/input_professor_picture"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn_professor_picture_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/button_select" />
    </RelativeLayout>
    
    <TextView
        android:id="@+id/tv_professor_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/input_professor_number" />

    <EditText
        android:id="@+id/edit_professor_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLines="60" >

    </EditText>
        
    <TextView
        android:id="@+id/tv_professor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/input_professor_name" />

    <EditText
        android:id="@+id/edit_professor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="60"
        android:ems="10" >
    </EditText>
        
    <TextView
        android:id="@+id/tv_professor_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/input_professor_phone" />

    <EditText
        android:id="@+id/edit_professor_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:maxLines="60" >

    </EditText>
        
    <TextView
        android:id="@+id/tv_professor_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/input_professor_address" />

    <EditText
        android:id="@+id/edit_professor_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="60"
        android:ems="10" >
    </EditText>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save" />

</LinearLayout>
